האב טיפוס עובד!!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "**/*.ts" // כולל את כל קבצי ה-TypeScript בפרויקט
 , "drafts/wake-on-lan-test.mjs"  ],
   "exclude": [
-    "node_modules" // לא כולל את תיקיית node_modules
+    "node_modules", // לא כולל את תיקיית node_modules
+    "temp"
   ]
 }
