פיצ'ר: מימוש שרת Express ושיפור גילוי SSDP
קומיט זה מציג שרת Express חדש לניהול התקני UPnP ומשפר משמעותית את מנגנון גילוי ה-SSDP.

**פיצ'רים ושיפורים חדשים:**

*   **שרת Express (server/index.ts):**
    *   הוספת שרת Express בסיסי המאזין בפורט 3000.
    *   מגיש קבצים סטטיים מתיקיית public.
    *   מספק נקודות קצה (API endpoints):
        *   /api/discover: מאתחל גילוי התקנים.
        *   /api/browse: (Placeholder) לגלישה בספריות תוכן.
        *   /api/renderer: (Placeholder) לשליטה בהתקני מדיה (renderers).
    *   משלב את continuousDeviceExplorer לגילוי רציף של התקנים.
    *   משתמש ב-dotenv לניהול משתני סביבה.
    *   כולל טיפול שגיאות בסיסי.

*   **שיפורי גילוי SSDP (src/ssdpSocketManager.ts, src/types.ts, src/upnpDeviceExplorer.ts):**
    *   **זיהוי ממשקי רשת רלוונטיים:**
        *   מימוש הפונקציה findRelevantNetworkInterfaces לזיהוי ממשקי רשת IPv4 ו-IPv6 מתאימים ל-SSDP, תוך התעלמות מכתובות פנימיות וכתובות APIPA.
        *   טיפול שונה בפורמט כתובות IPv6 link-local עבור Windows ומערכות הפעלה אחרות.
    *   **יצירת סוקטים משופרת:**
        *   הפונקציה createSingleSocket מקבלת כעת פרמטר אופציונלי networkInterfaces לצורך בדיקות.
        *   סוקטים נקשרים כעת לכתובות multicast רק בממשקי רשת רלוונטיים.
    *   **טיפול בהודעות SSDP גולמיות:**
        *   הוספת הטיפוסים RawSsdpMessagePayload ו- RawSsdpMessageHandler.
        *   האובייקט DiscoveryOptions כולל כעת קריאה חוזרת (callback) אופציונלית בשם onRawSsdpMessage, המאפשרת למשתמשים לעבד הודעות SSDP גולמיות לפני שהן מעובדות על ידי הספרייה.
        *   הפונקציה _discoverDevicesOrchestrator מפעילה כעת קריאה חוזרת זו אם סופקה.
    *   **בטיחות טיפוסים וקריאות:**
        *   הוספת כינויי טיפוס OnMessage ו-SendMSearch בקובץ ssdpSocketManager.ts.
    *   הסרת האפשרות discoveryTimeoutPerInterfaceMs מכיוון שאינה בשימוש ישיר עוד באורקסטרטור.

*   **סקריפטים לבנייה ופיתוח (package.json):**
    *   הוספת סקריפטים חדשים ל-npm עבור:
        *   build: בונה את היישום הראשי.
        *   start:dev: מריץ את היישום במצב צפייה (watc

--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
+  "main": "src/index.ts",
   "dependencies": {
     "@achingbrain/ssdp": "^4.2.2",
+    "@perseveranza-pets/milo": "^0.3.0",
+    "@types/express": "^5.0.2",
     "@types/xml2js": "^0.4.14",
     "axios": "^1.9.0",
     "dlna-browser-utils": "^0.0.2",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "http-parser-js": "^0.5.10",
+    "llhttp": "^1.0.1",
     "node-ssdp": "^4.0.1",
     "strong-soap": "^4.1.12",
     "upnp-mediarenderer-client": "^1.4.0",
@@ -15,9 +22,12 @@
   },
   "scripts": {
     "example:custom-discovery": "node node_modules/ts-node/dist/bin.js examples/testCustomDiscovery.ts",
-    "example:comprehensive": "node node_modules/ts-node/dist/bin.js examples/comprehensiveUpnpExample.ts"
+    "example:comprehensive": "node node_modules/ts-node/dist/bin.js examples/comprehensiveUpnpExample.ts",
+    "test": "bun test ./src",
+    "start": "bun ./server/server.ts"
   },
   "devDependencies": {
+    "@types/bun": "^1.2.14",
     "@types/node-ssdp": "^4.0.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
