הוספת החבילה ping

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@achingbrain/ssdp": "^4.2.2",
     "@perseveranza-pets/milo": "^0.3.0",
     "@types/express": "^5.0.2",
+    "@types/ping": "^0.4.4",
     "@types/xml2js": "^0.4.14",
     "axios": "^1.9.0",
     "dlna-browser-utils": "^0.0.2",
@@ -12,6 +13,7 @@
     "http-parser-js": "^0.5.10",
     "llhttp": "^1.0.1",
     "node-ssdp": "^4.0.1",
+    "ping": "^0.4.4",
     "strong-soap": "^4.1.12",
     "upnp-mediarenderer-client": "^1.4.0",
     "wake-on-lan": "^0.1.0",
