--- a/package.json
+++ b/package.json
@@ -1,37 +1,19 @@
 {
-  "main": "src/index.ts",
-  "dependencies": {
-    "@achingbrain/ssdp": "^4.2.2",
-    "@perseveranza-pets/milo": "^0.3.0",
-    "@types/express": "^5.0.2",
-    "@types/ping": "^0.4.4",
-    "@types/xml2js": "^0.4.14",
-    "axios": "^1.9.0",
-    "dlna-browser-utils": "^0.0.2",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "http-parser-js": "^0.5.10",
-    "llhttp": "^1.0.1",
-    "node-ssdp": "^4.0.1",
-    "ping": "^0.4.4",
-    "strong-soap": "^4.1.12",
-    "upnp-mediarenderer-client": "^1.4.0",
-    "wake-on-lan": "^0.1.0",
-    "wake_on_lan": "^1.0.0",
-    "winston": "^3.17.0",
-    "xml2js": "^0.6.2",
-    "xmlbuilder2": "^3.1.1"
-  },
+  "name": "dlna-tv-play-server",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "example:custom-discovery": "node node_modules/ts-node/dist/bin.js examples/testCustomDiscovery.ts",
-    "example:comprehensive": "node node_modules/ts-node/dist/bin.js examples/comprehensiveUpnpExample.ts",
-    "test": "bun test ./src",
-    "start": "bun ./server/server.ts"
+    "start": "bun --cwd packages/server start",
+    "build": "bun -w run build",
+    "test": "bun -w run test"
   },
   "devDependencies": {
     "@types/bun": "^1.2.14",
     "@types/node-ssdp": "^4.0.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
-  }
+  },
+  "packageManager": "bun@1.0.0"
 }
