Refactor: ארגון קוד השרת ושיפור לוגיקת הפעלת פריסטים
קומיט זה מציג ארגון מחדש (refactoring) משמעותי של קוד צד השרת (\packages/server\) במטרה לשפר מודולריות, תחזוקתיות ופונקציונליות. הוא גם מעדכן את לוגיקת הפעלת הפריסטים לפעולה יציבה ויעילה יותר.

שינויים עיקריים כוללים:

1.  **מודולריזציה של קוד השרת:**
    *   הלוגיקה המרכזית של השרת שהייתה מרוכזת בעבר בקובץ \packages/server/src/index.ts\ פוצלה למספר מודולים ממוקדים: \config.ts\, \deviceManager.ts\, \outes.ts\, \pp.ts\.
    *   הקובץ \packages/server/src/index.ts\ הפך לנקודת כניסה רזה.

2.  **שיפורים בניהול פריסטים:**
    *   הקובץ \presetManager.ts\ עודכן כך שיצפה לקובץ \presets.json\ בתיקייה חדשה \data/\ ברמה העליונה של הפרויקט. תיקיית \data/\ נוספה ל-\.gitignore\.
        *   **הערה:** יש לוודא שהקובץ הישן \packages/server/src/presets.json\ נמחק, ושהקובץ \data/presets.json\ קיים עם התוכן המתאים (יצרתי אותו בשלב קודם).
    *   כל ה-handlers של הנתיבים הקשורים לפריסטים רוכזו ב-\presetManager.ts\.

3.  **לוגיקת הפעלת פריסטים מקבילית:**
    *   הלוגיקה ב-\presetManager.ts\ אורגנה מחדש לביצוע מקבילי (באמצעות \Promise.allSettled\) של הערת ה-renderer ואחזור פריטי המדיה.

4.  **ארגון מחדש של \endererHandler\:**
    *   הפונקציה \playFolderOnRenderer\ פוצלה ל-\getFolderItemsFromMediaServer\ ו-\playProcessedItemsOnRenderer\.
    *   נתיב API ישיר לניגון תיקייה הוער זמנית.

5.  **פונקציונליות Wake-on-LAN משופרת:**
    *   המודול \packages/wake-on-lan\ מייצא פונקציה חדשה \wakeDeviceAndVerify\ המאגדת שליחת WOL ואימות פינג.
    *   לוגיקת הפעלת הפריסט משתמשת כעת בפונקציה זו.

6.  **ניקוי נתיבי API:**
    *   נתיב API כפול להפעלת פריסט הוסר.

שינויים אלו נועדו ליצור ארכיטקטורת שרת מאורגנת ויציבה יותר.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ node_modules/
 logs/
 *.log
 
+# התעלמות מתיקיית הנתונים
+data/ 
+
 temp/
 
 # Optional npm cache directory
@@ -51,5 +54,4 @@ bun.lockb
 !drafts/
 # Executables
 server.exe
-server/presets.json
-server/presets.json
+# server/presets.json # הוסר, הקובץ עבר לתיקיית data שמתעלמים ממנה
