fix: תקן בנייה והתעלם מקבצי tsbuildinfo\n\n- תקן את סקריפט ה-build בקובץ package.json הראשי לשימוש ב---filter=*.\n- הוסף התעלמות מקבצי 	sconfig.tsbuildinfo לקובץ .gitignore.\n- הסר קבצי *.tsbuildinfo קיימים מהמעקב של Git.

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ server.exe
 # server/presets.json # הוסר, הקובץ עבר לתיקיית data שמתעלמים ממנה
 
 *.tsbuildinfo
+tsconfig.tsbuildinfo
 **.tsbuildinfo
 **/tsconfig.tsbuildinfo
 packages/dlna-core/tsconfig.tsbuildinfo
