הוספה: סקריפט CLI לחקירת התקני UPnP/DLNA
מוסיף סקריפט חדש examples/cli_device_explorer.ts המאפשר:
- גילוי התקנים ברשת.
- סינון התקנים כפולים לפי UDN.
- בחירת התקן (עם הצגת סוג התקן קריא).
- הצגת שירותים, פעולות ומשתני מצב.
- הפעלת פעולות עם ארגומנטים מהמשתמש.

הסקריפט משתמש בחבילת inquirer לאינטראקציה בשורת הפקודה.
החבילה inquirer נוספה כתלות לפרויקט.

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
-  "packageManager": "bun@1.0.0"
+  "packageManager": "bun@1.0.0",
+  "dependencies": {
+    "inquirer": "^12.6.3"
+  }
 }
