שיפורים וייצוב סקריפט CLI לחקירת התקנים
סקריפט examples/cli_device_explorer.ts שופר ויוצב:
- בוצע מעבר לשימוש ב-API החדש של @inquirer/prompts (פונקציות select, input, confirm).
- שופרה לוגיקת הניווט בתפריטים על ידי שימוש בלולאות פנימיות במקום רקורסיה עמוקה, במטרה לטפל בתקיעות פוטנציאליות.
- נוספו לוגים מפורטים לניפוי באגים.
- כולל סינון התקנים כפולים לפי UDN והצגת סוג התקן קריא.

הערה: קיימת עדיין בעיית תקיעות קלט קלה עם inquirer בסביבת Bun/PowerShell, הניתנת לעקיפה על ידי הקשת Enter.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "packageManager": "bun@1.0.0",
   "dependencies": {
+    "@inquirer/prompts": "^7.5.3",
     "inquirer": "^12.6.3"
   }
 }
