--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,10 +2,10 @@
   "name": "@dlna-tv-play/server",
   "version": "0.1.0",
   "private": true,
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "bun ./dist/index.js",
+    "start": "bun ./src/index.ts",
     "test": "bun test"
   },
   "dependencies": {
