--- a/packages/wake-on-lan/package.json
+++ b/packages/wake-on-lan/package.json
@@ -2,7 +2,7 @@
   "name": "@dlna-tv-play/wake-on-lan",
   "version": "0.1.0",
   "private": false,
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
