feat(logging): שילוב BetterStack לניהול לוגים מתקדם
שילוב מקיף של שירות הלוגים BetterStack (באמצעות Logtail) לתוך מערכת הלוגים הקיימת המבוססת על Winston. שינוי זה משפר באופן משמעותי את יכולות הניטור והדיבאגינג של האפליקקציה.

שינויים עיקריים:

1.  **שילוב Logtail Transport:**
    -   נוסף טרנספורט של Winston עבור Logtail, המאפשר שליחת כל הלוגים מהאפליקציה ישירות לפלטפורמת BetterStack.
    -   השליחה מבוקרת על ידי משתני סביבה (LOG_TO_LOGTAIL, LOGTAIL_SOURCE_TOKEN, LOGTAIL_INGESTING_HOST).

2.  **העשרת הלוגים בקונטקסט:**
    -   לכל הודעת לוג מתווספים כעת מאפיינים גלובליים חשובים:
        -   environment: סביבת הריצה (development, production, וכו'), נקבע על ידי NODE_ENV.
        -   module: שם המודול שממנו נשלח הלוג.
        -   env_location: מיקום הסביבה הפיזי/לוגי (למשל, Local-Dev, AWS-Prod), נקבע על ידי ENV_LOCATION.

3.  **טיפול ברמות לוג מותאמות אישית:**
    -   זוהה חוסר תאימות בין רמות הלוג המותאמות אישית בפרויקט (כולל trace) לבין הרמות הנתמכות ב-Logtail.
    -   יושם פתרון הממפה את רמת trace לרמת debug לפני השליחה ל-Logtail.
    -   כדי לא לאבד מידע, הרמה המקורית נשמרת במאפיין חדש original_level: 'trace'.

4.  **טעינת משתני סביבה היררכית:**
    -   נוצר טוען סביבה מותאם אישית (envLoader.ts) שמחליף את השימוש הסטנדרטי ב-dotenv.
    -   הטוען החדש מאפשר טעינת קובץ .env משורש הפרויקט כבסיס, ודריסתו על ידי קובץ .env מקומי של כל חבילה (למשל, packages/server).

5.  **שיפור וארגון הקוד (Refactoring):**
    -   הלוגיקה של אתחול Logtail והלוגיקה של עיבוד המטא-דאטה של הלוגים הופרדו לפונקציות עזר ייעודיות (setupLogtailTransport, formatLogMetadata) לשיפור הקריאות והתחזוקה של קובץ הלוגר.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,23 @@
+
+
 PRESET_RENDERER_UDN=uuid:your_renderer_udn_here
 PRESET_MEDIA_SERVER_UDN=uuid:your_media_server_udn_here
 PRESET_FOLDER_OBJECT_ID=your_folder_object_id_here
+
+LOG_MODULES = ""
+LOG_LEVEL = "trace"
+LOG_TO_CONSOLE = "true"
+LOG_HIDE_MODULES = ""
+
+#region BetterStackVariables
+LOGTAIL_SOURCE_TOKEN=""
+LOGTAIL_INGESTING_HOST=""
+LOG_TO_LOGTAIL="false"
+#endregion BetterStackVariables
+
+ENV_LOCATION="MyComputer"
+NODE_ENV="development"
+LOG_TO_CONSOLE="true"
+
+NODE_ENV="development"
+PORT=3300
