--- a/packages/dlna-core/package.json
+++ b/packages/dlna-core/package.json
@@ -9,6 +9,9 @@
     "test": "bun test"
   },
   "dependencies": {
+    "@logtail/node": "^0.5.5",
+    "@logtail/types": "^0.5.3",
+    "@logtail/winston": "^0.5.5",
     "axios": "^1.9.0",
     "http-parser-js": "^0.5.10",
     "winston": "^3.17.0",
