--- a/packages/lg-webos-remote/package.json
+++ b/packages/lg-webos-remote/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "MIT",
   "module": "src/index.ts",
-  "type": "module",
+  "main": "src/index.ts",
   "devDependencies": {
     "@types/bun": "latest"
   },
@@ -23,5 +23,9 @@
     "@types/ws": "^8.18.1",
     "eventemitter3": "^5.0.1",
     "ws": "^8.18.2"
+  },
+  "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "test": "bun test"
   }
 }
