refactor: איחוד שרת הפרוקסי עם שרת Hono הראשי
קומיט זה משלים את המעבר לארכיטקטורה החדשה על ידי איחוד שרתים ופישוט תהליך ההרצה.

השינויים המרכזיים:

1.  **איחוד שרתים:** הלוגיקה של שרת הפרוקסי ה'טיפש' שולבה ישירות לתוך שרת ה-Hono הראשי (index.ts) באמצעות יכולות ה-WebSocket המובנות של Hono. כעת, שרת יחיד אחראי גם על הגשת הקבצים הסטטיים וגם על תיווך חיבורי ה-WebSocket.
2.  **מחיקת קוד מיותר:** הקובץ simple-proxy.ts נמחק מכיוון שהוא הפך למיותר.
3.  **עדכון תצורה:**
    *   קוד הלקוח (client.ts) עודכן להתחבר לנקודת הקצה החדשה של הפרוקסי (ws://localhost:3005/ws).
    *   הסקריפטים ב-package.json עודכנו כך שיריצו את השרת המאוחד.

--- a/packages/proxy-server/package.json
+++ b/packages/proxy-server/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start:proxy": "bun run src/simple-proxy.ts",
+    "start": "bun run src/index.ts",
+    "dev": "bun run --watch src/index.ts",
     "build:client": "bun build ./public/remote-control/client.ts --outdir ./public/remote-control/dist"
   },
   "devDependencies": {
