--- a/packages/proxy-server/package.json
+++ b/packages/proxy-server/package.json
@@ -19,6 +19,7 @@
     "@hono/node-server": "^1.14.4",
     "hono": "^4.7.11",
     "lg-webos-remote": "workspace:*",
-    "ws": "^8.18.2"
+    "ws": "^8.18.2",
+    "axios": "^1.7.2"
   }
 }
