feat(gui, server): ממשק משתמש חדש ב-Svelte 5 ו-API תומך
קומיט זה מציג ממשק משתמש חדש ומודרני שנבנה באמצעות Svelte 5, SvelteKit ו-Tailwind CSS v4. הוא מחליף את הממשק הישן ומספק חווית משתמש עשירה ואינטראקטיבית יותר. בנוסף, השרת עודכן עם API ייעודי לתמיכה בממשק החדש.

**פיצ'רים עיקריים בממשק המשתמש (svelte-gui):**

*   **רשימת התקנים:** הצגה דינמית של כל התקני ה-DLNA/UPnP שהתגלו ברשת, עם פוללינג אוטומטי לעדכונים.
*   **דפדפן קבצים:** ממשק לעיון בתוכן של שרתי מדיה (ContentDirectory), כולל ניווט היררכי בתיקיות.
*   **שלט רחוק:** שלט וירטואלי לשליטה על נגני מדיה (Renderers), כולל פקדי ניגון (נגן, השהה, עצור), שליטה על עוצמת השמע והצגת מידע על המדיה המתנגנת.
*   **ניהול פריסטים:** מערכת מלאה ליצירה, עריכה ומחיקה של פריסטים המשלבים הגדרות Renderer ו-Media Server.
*   **Wake on LAN:** אפשרות לשלוח פקודות WOL להתקנים מתוך הפריסטים השמורים.
*   **טכנולוגיות:** שימוש ב-Svelte 5 Runes לניהול מצב ריאקטיבי, SvelteKit לניתוב, ו-Tailwind CSS v4 לעיצוב.

**שינויים בשרת (server & dlna-core):**

*   **API Endpoints חדשים:** נוספו נקודות קצה ייעודיות עבור הממשק החדש:
    *   GET /api/devices: קבלת רשימת ההתקנים.
    *   POST /api/devices/:udn/browse: עיון בתוכן שרת מדיה.
    *   POST /api/devices/:udn/action: ביצוע פעולות UPnP גנריות.
    *   GET, POST /api/presets: ניהול פריסטים (CRUD).
    *   POST /api/presets/:name/play: הפעלת פריסט.
    *   POST /api/presets/:name/wake: שליחת WOL.
*   **CORS:** הוספת תמיכה ב-CORS כדי לאפשר תקשורת בין שרת הפיתוח של SvelteKit ל-API.
*   **הגשת קבצים סטטיים:** השרת הוגדר להגיש את ה-build הסטטי של אפליקציית ה-Svelte.
*   **הרחבת טיפוסים:** עדכון והרחבה של הטיפוסים ב-dlna-core כדי לשתף הגדרות בין השרת לממשק המשתמש.

**שינויים נוספים:**

*   עדכון תלויות והוספת חבילות חדשות עבור סביבת הפיתוח של Svelte.
*   הוספת תיעוד תכנון עבור הממשק החדש.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,8 +9,10 @@
     "test": "bun test"
   },
   "dependencies": {
-    "dlna.js": "workspace:*",
     "@dlna-tv-play/wake-on-lan": "workspace:*",
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
+    "dlna.js": "workspace:*",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
