--- a/packages/dlna-core/package.json
+++ b/packages/dlna-core/package.json
@@ -38,6 +38,7 @@
     "@logtail/winston": "^0.5.5",
     "axios": "^1.9.0",
     "http-parser-js": "^0.5.10",
+    "node-arp": "^1.0.6",
     "winston": "^3.17.0",
     "xml2js": "^0.6.2",
     "xmlbuilder2": "^3.1.1"
