--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "dlna.js": "workspace:*",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.2"
