תיקון תקלות מק אדרס, הוספת מפות מקור (לא יודע אם באמת זה עובד),

--- a/packages/dlna-core/tsconfig.json
+++ b/packages/dlna-core/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "composite": true // חשוב עבור project references
+    "composite": true, // חשוב עבור project references
+    "sourceMap": true,
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
