proxy-server: עיצוב מחדש של ממשק השליטה מרחוק
- העברת קבצי ממשק המשתמש מתיקיית remote-control/ לתיקייה הראשית
- הוספת client.ts חדש עם תמיכה בפרוקסי ובחיבור ישיר
- הוספת tv-list.json לניהול רשימת טלוויזיות
- שדרוג index.html עם:
  * אפשרות בחירה בין הזנה ידנית לבחירה מרשימה
  * תיבת סימון לשימוש בפרוקסי (עוקף CORS)
  * ממשק משופר עם פקדי D-pad, ווליום ופעולות מהירות
  * תמיכה בצילום מסך רציף
  * שדות הקלדה משופרים
- מחיקת קבצים ישנים: main.js וקבצי remote-control/
- עדכון package.json

--- a/packages/proxy-server/package.json
+++ b/packages/proxy-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "bun run src/index.ts",
     "dev": "bun run --watch src/index.ts",
-    "build:client": "bun build ./public/remote-control/client.ts --outdir ./public/remote-control/dist"
+    "build:client": "bun build ./public/client.ts --outdir ./public/dist"
   },
   "devDependencies": {
     "@types/bun": "latest",
