--- a/packages/webos-remote-ui/tsconfig.json
+++ b/packages/webos-remote-ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.app.json",
+  "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
     "types": ["svelte"]
   }
