--- a/packages/webos-remote-ui/package.json
+++ b/packages/webos-remote-ui/package.json
@@ -7,22 +7,25 @@
     "dev": "bunx --bun svelte-kit sync && bunx --bun vite dev",
     "build": "bunx --bun svelte-kit sync && bunx --bun vite build",
     "preview": "bunx --bun vite preview",
-    "check": "bunx --bun svelte-kit sync && bunx --bun svelte-check --tsconfig ./tsconfig.json && bunx --bun vitest run --coverage",
-    "test": "bunx --bun vitest"
+    "check": "bunx --bun svelte-kit sync && bunx --bun svelte-check --tsconfig ./tsconfig.json && bunx vitest run --coverage",
+    "test": "bunx vitest"
   },
   "dependencies": {
     "lg-webos-remote": "workspace:*"
   },
   "devDependencies": {
+    "@opentelemetry/api": "^1.9.0",
     "@sveltejs/adapter-static": "^3.0.4",
-    "@sveltejs/kit": "^2.5.26",
+    "@sveltejs/kit": "^2.37.1",
     "@testing-library/svelte": "^5.2.1",
     "@types/node": "^22.10.1",
-    "svelte": "^4.2.18",
+    "@vitest/coverage-istanbul": "^3.2.4",
+    "jsdom": "^26.1.0",
+    "svelte": "^5.0.0",
     "svelte-check": "^4.0.5",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "vite": "^5.4.10",
-    "vitest": "^2.1.8"
+    "vite": "^7.1.0",
+    "vitest": "^3.2.4"
   }
 }
