fix: use svelte-kit cli for ui scripts

--- a/packages/webos-remote-ui/package.json
+++ b/packages/webos-remote-ui/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun svelte-kit sync && bunx --bun vite dev",
-    "build": "bunx --bun svelte-kit sync && bunx --bun vite build",
-    "preview": "bunx --bun vite preview",
-    "check": "bunx --bun svelte-kit sync && bunx --bun svelte-check --tsconfig ./tsconfig.json && bunx vitest run --coverage",
+    "sync": "bunx --bun svelte-kit sync",
+    "dev": "bun run sync && bunx --bun svelte-kit dev",
+    "build": "bun run sync && bunx --bun svelte-kit build",
+    "preview": "bunx --bun svelte-kit preview",
+    "check": "bun run sync && bunx --bun svelte-check --tsconfig ./tsconfig.json && bunx vitest run --coverage",
     "test": "bunx vitest"
   },
   "dependencies": {
